--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Associação Guias de Portugal" />
+  <!--   <meta name="description" content="Associação Guias de Portugal" /> -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -25,9 +25,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Associação Guias de Portugal</title>
-  <!-- <script type="text/javascript"
-    src="https://platform-api.sharethis.com/js/sharethis.js#property=5f0f33bc6216ed0012440651&product=inline-share-buttons"
-    async="async"></script> -->
 </head>
 
 <body>
