--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,11 +24,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Associação Guias de Portugal</title>
-  <meta name="description" content="Associação Guias de Portugal" />
+  <meta property="image" content="%PUBLIC_URL%/logo.png">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Associação Guias de Portugal">
-  <meta property="og:image" content='./assets/images/brasao_RGB.png'>
-  <meta property="og:description" content="Associação Guias de Portugal" />
+  <meta property="og:image" content="%PUBLIC_URL%/logo.png">
+  <meta property="og:image:secure_url" content="%PUBLIC_URL%/logo.png">
+  <meta property="og:image:width" content="114" />
+  <meta property="og:image:height" content="114" />
+  <!--   <meta name="description" content="Associação Guias de Portugal" /> -->
+  <!--   <meta property="og:description" content="Associação Guias de Portugal" /> -->
 </head>
 
 <body>
