--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,28 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Associação Guias de Portugal</title>
+  <meta name="title" content="Associação Guias de Portugal">
+  <meta name="description" content="">
+  <meta property="image" content="%PUBLIC_URL%/metalogo.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#154a7f">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.agp-teste.pt/">
+  <meta property="og:title" content="Associação Guias de Portugal">
+  <meta property="og:description" content="">
+  <meta property="og:image" content="/metalogo.png">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://www.agp-teste.pt/">
+  <meta property="twitter:title" content="Associação Guias de Portugal">
+  <meta property="twitter:description" content="">
+  <meta property="twitter:image" content="/logo.png">
+  <!--   <title>Associação Guias de Portugal</title>
   <meta property="image" content="%PUBLIC_URL%/logo.png">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Associação Guias de Portugal">
@@ -37,7 +59,7 @@
   <link rel="manifest" href="/site.webmanifest">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#154a7f">
   <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#ffffff"> -->
   <!--   <meta name="description" content="Associação Guias de Portugal" /> -->
   <!--   <meta property="og:description" content="Associação Guias de Portugal" /> -->
 </head>
