--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,8 +25,8 @@
     -->
   <title>Associação Guias de Portugal</title>
   <meta name="title" content="Associação Guias de Portugal">
-  <meta name="description" content="">
-  <meta property="image" content="%PUBLIC_URL%/metalogo.png">
+  <meta name="description" content="Guias de Portugal" data-react-helmet="true" />
+  <meta property="image" content="/metalogo.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -39,12 +39,15 @@
   <meta property="og:title" content="Associação Guias de Portugal">
   <meta property="og:description" content="">
   <meta property="og:image" content="/metalogo.png">
+  <!-- <meta property=" fb:app_id" content="your_app_id"> -->
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="http://agp-projecto-deploy.herokuapp.com">
   <meta property="twitter:title" content="Associação Guias de Portugal">
   <meta property="twitter:description" content="">
-  <meta property="twitter:image" content="/metalogo.png">
+  <meta property="twitter:image:src" content="/metalogo.png">
+  <meta property="twitter:image:alt" content="Associação Guias de Portugal">
+  <!-- <meta name=" twitter:site" content="@website-username"> -->
 </head>
 
 <body>
