--- a/client/public/index.html
+++ b/client/public/index.html
@@ -48,6 +48,7 @@
   <meta property="twitter:image:src" content="/metalogo.png">
   <meta property="twitter:image:alt" content="Associação Guias de Portugal">
   <!-- <meta name=" twitter:site" content="@website-username"> -->
+  <meta name="google-site-verification" content="R6W1pcEOXqmeCsQpsjSsW2AMxQ0cdWmc36p7B8oJen8" />
 </head>
 
 <body>
